--- a/app/.env
+++ b/app/.env
@@ -1,3 +1,4 @@
 DATABASE_URI = "postgresql://avnadmin:AVNS__tij43PrUJnmuRJUZB7@pg-1051cac0-atharvabhole239-4cf3.i.aivencloud.com:23403/defaultdb?sslmode=require"
 SECRET_KEY = "asfegageds"
 TRACK_MODIFICATIONS = 'True'
+TEMPLATES_AUTO_RELOAD = 'True'
