Conflicted code but register controllers fully functional

--- a/app/.env
+++ b/app/.env
@@ -2,3 +2,9 @@ DATABASE_URI = "postgresql://avnadmin:AVNS__tij43PrUJnmuRJUZB7@pg-1051cac0-athar
 SECRET_KEY = "asfegageds"
 TRACK_MODIFICATIONS = 'True'
 TEMPLATES_AUTO_RELOAD = 'True'
+MAIL_SERVER = 'smtp.gmail.com'
+MAIL_PORT = 587
+MAIL_USE_TLS = True
+MAIL_USERNAME = "atharvabhole239@gmail.com"
+MAIL_PASSWORD = "yqre vyzs ytlj ugiu"
+MAIL_DEFAULT_SENDER = "atharvabhole239@gmail.com"
