--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ __pycache__
 app/.env
 *.pyc
 __pycache__
+app/__pycache__/__init__.cpython-312.pyc
+app/models/__pycache__/farmer_bank.cpython-312.pyc
+app/.env
